src/kubernetes-dashboard/_NOTNEEDED?_kubernetes-dashboard-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          projectcalico.org/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/name: ingress-nginx
    ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-dashboard
  policyTypes:
  - Ingress
